--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
+* {
+  background-color: lightsteelblue;
+  font-family: 'Press Start 2P', cursive;
+
+}
+
+#headNavContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 14px;
+  text-decoration: none;
+  font-weight: bolder;
+  color:rgb(0, 0, 11);
+  font-family: 'Press Start 2P', 'Rubik', sans-serif;
+}
+
+
+#footContainter {
+  display: flex;
+  justify-content: space-around;
+
+}
+
+#homeName {
+  font-family: 'Monoton'; 
+  font-size: 60px;
+  letter-spacing: 4px;
+  color: rgb(6, 0, 0);;
+  display: flex;
   text-align: center;
+  margin-top: 4px;
+  margin-bottom: 1px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#homeContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
+
+}
+
+#homeIcons {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  width: 50%;
+  border-bottom: 2px dashed black;
+  border-top: 2px dashed black;
+  font-size: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+#homeSubhead {
+  font-size: 32px;
+  display: flex;
+  margin-top: 0px;
+  justify-content: center;
+  text-align: center;
+  font-family: 'News Cycle', 'Rubik', sans-serif;
+
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#headNavContainer a {
+  text-decoration: none;
+  color: rgb(4, 4, 57);
+  font-family: 'Press Start 2P', 'Rubik', sans-serif;
 }
