--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,21 @@
 
 }
 
+.material-icons.md-48 { font-size: 80px; }
+
+
 #contact, #resume {
-  border: whitesmoke 5px solid;
+  border: whitesmoke 3px solid;
   margin-right: 10px;
   background-color:rgb(29, 66, 115);
   color: white(29, 66, 115);
+}
+
+#button1 {
+  border: whitesmoke 3px solid;
+  background-color:rgb(29, 66, 115);
+  color: rgb(167, 178, 186); 
+  font-size: 60px; 
 }
 
 
@@ -38,11 +48,6 @@
 }
 
 
-
-
-
-
-
 #footIconContainer {
   display: flex;
   justify-content: space-around;
@@ -50,11 +55,11 @@
 }
 
 #homeName {
-  font-family: 'Monoton'; 
-  font-size: 60px;
+  font-family: 'News Cycle', sans-serif;  
+  font-size: 100px;
   letter-spacing: 4px;
-  color: rgb(6, 0, 0);;
   display: flex;
+  color: white;
   text-align: center;
   margin-top: 4px;
   margin-bottom: 1px;
@@ -105,7 +110,7 @@
 }
 
 #homeIntro {
-  font-size: 25px;
+  font-size: 40px;
   display: flex;
   text-align: center;
   align-self: flex-end;
@@ -114,25 +119,37 @@
   margin-right: 6px;
   margin-top: 4px;
   font-family: 'Rubik', sans-serif;
+  color: rgb(209, 212, 232);
 }
 
-#homeTrevorPhoto {
-  border-radius: 58%;
-  max-width: 600px;
-  max-height: 600px;
-  justify-content: center;
-}
-
-#homeSubhead {
-  font-size: 32px;
+#homeBody {
   display: flex;
-  margin-top: 0px;
-  justify-content: center;
-  text-align: center;
-  font-family: 'News Cycle', 'Rubik', sans-serif;
-
+  flex-direction: row;
   
 }
+
+#homeJournalist {
+  font-size: 65px;
+  margin-left: 10px;
+  font-family: 'News Cycle', sans-serif;  
+  font-size: 100px;
+  text-align: center;
+  margin-top: 4px;
+  margin-bottom: 1px;
+  color: rgb(209, 212, 232);
+
+}
+
+h2 {
+  font-size: 120px;
+  text-align: center;
+  color: rgb(35, 165, 165);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+
+}
+
+
 
 
 
@@ -142,3 +159,4 @@
     align-self: center;
     border-bottom: 4px solid black;
 }
+
