--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,68 @@
 * {
-  background-color: rgb(29, 66, 115);
+  background-color: rgb(58, 88, 133);
+}
+
+h1 {
+  font-size: 66px;
+  color: #519A8C;
+  text-decoration: #83BDB2 wavy underline;
+  text-decoration-skip-ink: none;
+  text-underline-offset: 20px;
+  margin-bottom: 35px;
+
+}
+
+h3 {
+  font-size: 40px;
+  text-align: center;
+  color: rgb(194, 199, 216);
+}
+
+b {
+  color: #519A8C;
+  text-decoration: #83BDB2 dotted underline;
+
+
 }
 
 #navBrand {
   color: white;
   font-family: 'Monoton', cursive;
-  font-size: 70px;
+  font-size: 90px;
   padding-left: 40px;
 }
 
 #navLinks {
-  font-size: 50px;
+  font-size: 20px;
   font-family: 'Courier New', Courier, monospace;
 }
 
 #navContact {
-  font-size: 30px;
+  font-size: 20px;
   font-family: 'Times New Roman', Times, serif;
 
 }
 
-.material-icons.md-48 { font-size: 80px; }
+.material-icons.md-48 { font-size: 70px; 
+  color: #a8abb4;
+
+}
+
+#homePhotoContainer {
+  display: flex;
+  justify-content: center;
+}
+
+#homeTrevorPhoto {
+  border-radius: 66%;
+  max-width: 20%;
+  justify-content: center;
+  border: 8px #83BDB2 dotted;
+}
 
 
 #contact, #resume {
-  border: whitesmoke 3px solid;
+  border: #83BDB2 3px solid;
   margin-right: 10px;
   background-color:rgb(29, 66, 115);
   color: white(29, 66, 115);
