--- a/src/App.css
+++ b/src/App.css
@@ -2,49 +2,62 @@
   background-color: rgb(58, 88, 133);
 }
 
+/* HOme  */
+
 h1 {
-  font-size: 66px;
+  font-size: 600%;
   color: #519A8C;
   text-decoration: #83BDB2 wavy underline;
   text-decoration-skip-ink: none;
   text-underline-offset: 20px;
+  text-align: center;
   margin-bottom: 35px;
 
 }
 
 h3 {
-  font-size: 40px;
+  font-size: 210%;
   text-align: center;
   color: rgb(194, 199, 216);
+  margin-right: 5%;
+  margin-left: 5%;
 }
 
 b {
   color: #519A8C;
   text-decoration: #83BDB2 dotted underline;
 
-
 }
 
-#navBrand {
-  color: white;
-  font-family: 'Monoton', cursive;
-  font-size: 90px;
-  padding-left: 40px;
+#topHome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-#navLinks {
-  font-size: 20px;
-  font-family: 'Courier New', Courier, monospace;
+.material-icons.md-48 { 
+  font-size: 800%;
+  color: #519A8C;
 }
 
-#navContact {
-  font-size: 20px;
-  font-family: 'Times New Roman', Times, serif;
-
+.iconContainer {
+  display: flex;
+  justify-content: center;
 }
 
-.material-icons.md-48 { font-size: 70px; 
-  color: #a8abb4;
+
+
+
+#introContainer {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+#homeTrevorPhoto {
+  border: 8px #83BDB2 dotted;
+  max-width: 55%;
+  height: auto;
 
 }
 
@@ -53,19 +66,34 @@ b {
   justify-content: center;
 }
 
-#homeTrevorPhoto {
-  border-radius: 66%;
-  max-width: 20%;
-  justify-content: center;
-  border: 8px #83BDB2 dotted;
+#homeButtons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-right: 10%;
+  margin-left: 10%;
+  flex-wrap: wrap;
+
+  margin-bottom: 8px;
 }
 
-
-#contact, #resume {
+#dropdown-basic-button {
   border: #83BDB2 3px solid;
   margin-right: 10px;
   background-color:rgb(29, 66, 115);
   color: white(29, 66, 115);
+  font-size: 200%;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+
+#downloadButton {
+  border: #83BDB2 3px solid;
+  margin-right: 10px;
+  background-color:transparent;
+  color: rgb(194, 199, 216);
+  font-size: 50px;
+
 }
 
 #button1 {
@@ -77,31 +105,17 @@ b {
 
 
 
- #navbar {
-  color: red;
-  display: flex;
-  justify-content: space-between;
-  margin-right: 40px;
 
+#socialIcons {
+  margin: 8px;
 }
-
 
 #footIconContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 
 }
 
-#homeName {
-  font-family: 'News Cycle', sans-serif;  
-  font-size: 100px;
-  letter-spacing: 4px;
-  display: flex;
-  color: white;
-  text-align: center;
-  margin-top: 4px;
-  margin-bottom: 1px;
-}
 
 .bodyContainer {
   display: flex;
@@ -114,38 +128,18 @@ b {
 
 }
 
-.bodyContainer #homeMyJ {
-  display: flex;
-  flex-direction: column;
-  border-right: 4px dotted black;
-  padding-right: 50px;
-  margin-right: 50px;
-}
 
-.webDev {
-  display: flex;
-  flex-direction: column;
-  border-right-style :none; 
-}
+
 
 #homeContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  
-
+  justify-content: center;  
 }
 
-#homeIcons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  justify-content: space-around;
-  width: 50%;
-  border-bottom: 2px dashed black;
-  border-top: 2px dashed black;
-  font-size: 100px;
-}
+
+
+
 
 #homeIntro {
   font-size: 40px;
@@ -160,23 +154,8 @@ b {
   color: rgb(209, 212, 232);
 }
 
-#homeBody {
-  display: flex;
-  flex-direction: row;
-  
-}
 
-#homeJournalist {
-  font-size: 65px;
-  margin-left: 10px;
-  font-family: 'News Cycle', sans-serif;  
-  font-size: 100px;
-  text-align: center;
-  margin-top: 4px;
-  margin-bottom: 1px;
-  color: rgb(209, 212, 232);
 
-}
 
 h2 {
   font-size: 120px;
@@ -189,12 +168,51 @@ h2 {
 
 
 
+/* Header */
 
+#navBrand {
+  color: white;
+  font-family: 'Monoton', cursive;
+  font-size: 90px;
+  padding-left: 40px;
+}
+
+#navLinks {
+  font-size: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#navContact {
+  font-size: 20px;
+  font-family: 'Times New Roman', Times, serif;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+#navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+
+#contact, #resume {
+  border: #83BDB2 3px solid;
+  margin-right: 10px;
+  background-color:rgb(29, 66, 115);
+  color: white(29, 66, 115);
+}
+
+/* footer  */
 
 #footContact {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: x-large;
-    align-self: center;
-    border-bottom: 4px solid black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: x-large;
+  align-self: center;
+  border-bottom: 4px solid black;
 }
 
