--- a/src/App.css
+++ b/src/App.css
@@ -216,3 +216,15 @@ h2 {
   border-bottom: 4px solid black;
 }
 
+/* About me */
+
+#aboutContainter {
+  display: flex;
+  flex-direction: row;
+}
+
+#aboutPic {
+  display: flex;
+  flex-grow: 120;
+
+}
