more about including col and rows with bootstrap

--- a/src/App.css
+++ b/src/App.css
@@ -223,8 +223,10 @@ h2 {
   flex-direction: row;
 }
 
-#aboutPic {
-  display: flex;
-  flex-grow: 120;
-
+h4 {
+  font-size: 130%;
+  color: rgb(194, 199, 216);
+  margin-right: 2%;
+  margin-left: 2%;
 }
+
