--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 h3 {
-  font-size: 210%;
+  font-size: 180%;
   text-align: center;
   color: rgb(194, 199, 216);
   margin-right: 5%;
@@ -158,7 +158,7 @@ b {
 
 
 h2 {
-  font-size: 120px;
+  font-size: 500%;
   text-align: center;
   color: rgb(35, 165, 165);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -228,6 +228,8 @@ h4 {
   color: rgb(194, 199, 216);
   margin-right: 2%;
   margin-left: 2%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #timelineDate {
@@ -278,4 +280,16 @@ th {
 
 td {
   color:#83BDB2;
+}
+
+i {
+  font-size: 500%;
+  padding-right: 4px;
+}
+
+#devicon {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+
 }
