added resume elements, all good

--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,15 @@ b {
 
 }
 
+#downloadResume {
+  border: #83BDB2 3px solid;
+  margin-right: 10px;
+  background-color:rgb(29, 66, 115);
+  color: rgb(194, 199, 216);
+  font-size: 225%;
+
+}
+
 #button1 {
   border: whitesmoke 3px solid;
   background-color:rgb(29, 66, 115);
@@ -303,4 +312,13 @@ i {
   max-height: 500px;
   max-width: 800px;
 
+}
+
+#resumeContain {
+  margin: 20px;
+}
+
+#buttonContain {
+  display: flex;
+  align-items: center;
 }
