--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,46 @@
 body {
-  background-color: rgb(58, 88, 133);
+  background-color: #02577a	;
+
 }
 
 /* HOme  */
 
 h1 {
   font-size: 600%;
-  color: #519a8c;
-  text-decoration: #83bdb2 wavy underline;
+  font-family: 'Bebas Neue', cursive;
+  text-decoration: #def2f1 wavy underline;
   text-decoration-skip-ink: none;
   text-underline-offset: 20px;
   text-align: center;
   margin-bottom: 35px;
+  color: #17252a
 }
 
 
 h2 {
-  font-size: 500%;
+  font-size: 400%;
   text-align: center;
-  color: rgb(35, 165, 165);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  
+  font-family: 'Frank Ruhl Libre', serif;
+  color: #def2f1;
+  text-decoration: #def2f1 wavy underline;
+  text-decoration-skip-ink: none;
+  text-underline-offset: 20px;
+  padding-bottom: 20px;
+
 
 }
 
 h3 {
   font-size: 180%;
   text-align: center;
-  color: rgb(194, 199, 216);
+  color: #def2f1;
   margin-right: 5%;
   margin-left: 5%;
 }
 
-h4 {
-  font-size: 400%;
-  text-align: center;
-  color: rgb(35, 165, 165);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
 
-b {
-  color: #519a8c;
-  text-decoration: #83bdb2 dotted underline;
-}
+
+
 
 #topHome {
   display: flex;
@@ -53,7 +50,7 @@ b {
 
 .material-icons.md-48 {
   font-size: 800%;
-  color: #519a8c;
+  color: #499d8d;
 }
 
 .material-icons.md-49 {
@@ -72,8 +69,8 @@ b {
 }
 
 #homeTrevorPhoto {
-  border: 8px #83bdb2 dotted;
-  max-width: 55%;
+  border: 8px #499d8d dotted;
+  max-width: 50%;
   height: auto;
 }
 
@@ -93,9 +90,9 @@ b {
 }
 
 #dropdown-basic-button {
-  border: #83bdb2 3px solid;
+  border: #499d8d 3px solid;
   margin-right: 10px;
-  background-color: rgb(29, 66, 115);
+  background-color: #17252a;
   color: white(29, 66, 115);
   font-size: 200%;
   margin-top: 8px;
@@ -103,25 +100,25 @@ b {
 }
 
 #downloadButton {
-  border: #83bdb2 3px solid;
+  border: #499d8d 3px solid;
   margin-right: 10px;
   background-color: transparent;
-  color: rgb(194, 199, 216);
+  color: #def2f1;
   font-size: 50px;
 }
 
 #downloadResume {
-  border: #83bdb2 3px solid;
+  border: #499d8d 3px solid;
   margin-right: 10px;
-  background-color: rgb(29, 66, 115);
-  color: rgb(194, 199, 216);
+  background-color: #17252a;
+  color: #def2f1;
   font-size: 225%;
 }
 
 #button1 {
   border: whitesmoke 3px solid;
-  background-color: rgb(29, 66, 115);
-  color: rgb(167, 178, 186);
+  background-color: #17252a;
+  color:#def2f1;
   font-size: 60px;
 }
 
@@ -138,7 +135,7 @@ b {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  background-color: #a8abb4;
+  background-color: #def2f1;
   font-size: 18px;
   font-family: "Press Start 2P", "Rubik", sans-serif;
   text-align: center;
@@ -160,7 +157,7 @@ b {
   margin-right: 6px;
   margin-top: 4px;
   font-family: "Rubik", sans-serif;
-  color: rgb(209, 212, 232);
+  color: #def2f1;
 }
 
 
@@ -168,13 +165,13 @@ b {
 
 
 .cardBackground {
-  background-color: whitesmoke;
+  background-color: #def2f1;;
 }
 
 /* Header */
 
 #navBrand {
-  color: white;
+  color: #def2f1;;
   font-family: "Monoton", cursive;
   font-size: 90px;
   padding-left: 40px;
@@ -202,9 +199,9 @@ b {
 
 #contact,
 #resume {
-  border: #83bdb2 3px solid;
+  border: #499d8d 3px solid;
   margin-right: 10px;
-  background-color: rgb(29, 66, 115);
+  background-color: #17252a;
   color: white(29, 66, 115);
 }
 
@@ -224,27 +221,18 @@ b {
   flex-direction: row;
 }
 
-h4 {
-  font-size: 130%;
-  color: rgb(194, 199, 216);
-  margin-right: 2%;
-  margin-left: 2%;
-  display: flex;
-  flex-wrap: wrap;
-}
+
 
 #timelineDate {
-  color: whitesmoke;
+  color: #def2f1;
 }
 
 #timelineHeader {
-  color: #519a8c;
+  color:#499d8d;
   font-size: larger;
 }
 
-#timelineSubhead {
-  color: rgb(167, 178, 186);
-}
+
 
 #clipHeadline {
   font-size: larger;
@@ -269,11 +257,11 @@ h4 {
 
 th {
   font-size: larger;
-  color: #519a8c;
+  color: #499d8d;
 }
 
 td {
-  color: #83bdb2;
+  color: #499d8d;
 }
 
 i {
@@ -306,13 +294,13 @@ i {
 #contactForm {
   display: flex;
   flex-direction: column;
-  border: rgb(120, 130, 143) solid 10px;
+  border:  #def2f1 solid 10px;
   margin: 10px;
   padding: 30px;
 }
 
 label {
-  color: #519a8c;
+  color:#499d8d;
   font-size: larger;
 }
 #topHead {
@@ -332,10 +320,16 @@ label {
 
 #styleLink  {
   color: inherit;
-  text-decoration: inherit;
+  text-decoration:  #def2f1 underline ;
+  text-decoration-skip-ink: none;
+  text-underline-offset: 5px;
+  text-align: center;
+  margin-bottom: 35px;
   cursor: pointer;
-  color: #519a8c;
-  font-weight: 600
+  color: #499d8d;
+  font-weight: 600;
+
+  
   ;
 }
 
@@ -343,6 +337,8 @@ label {
   font-weight: bold;
   font-weight: 610;
   color: #83bdb2;
+  text-decoration: #def2f1 wavy underline;
+
 
   ;
   
