--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ h1 {
 
 
 h2 {
-  font-size: 400%;
+  font-size: 300%;
   text-align: center;
   font-family: 'Frank Ruhl Libre', serif;
   color: #def2f1;
@@ -32,6 +32,13 @@ h2 {
 h3 {
   font-size: 180%;
   text-align: center;
+  color: #def2f1;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
+h5 {
+  font-size: 180%;
   color: #def2f1;
   margin-right: 5%;
   margin-left: 5%;
@@ -215,10 +222,7 @@ h3 {
 
 /* About me */
 
-#aboutContainter {
-  display: flex;
-  flex-direction: row;
-}
+
 
 
 
@@ -346,5 +350,23 @@ label {
   font-weight: 610;
   color: #83bdb2;
   text-decoration: #def2f1 wavy underline;
+
+
+}
+
+
+
+#aboutContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+
+
+#aboutPic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 
 }
