spellcheck with fixes

--- a/src/App.css
+++ b/src/App.css
@@ -370,3 +370,18 @@ label {
 
 
 }
+
+#contactMe {
+  border: whitesmoke 3px solid;
+  background-color: #17252a;
+  color:#def2f1;
+  font-size: 60px;
+  width: 66%;
+  align-self: center;
+   
+}
+
+#contactButtonContain {
+  display: flex;
+  justify-content: center;
+}
