--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@ h5 {
 
 #contact,
 #resume {
-  border: #499d8d 3px solid;
+  border: #def2f1 solid;
   margin-right: 10px;
   background-color: #17252a;
   color: white(29, 66, 115);
